[package]
name = "lau-rhythm-nation"
version = "0.1.0"
edition = "2021"
description = "Unified cultural rhythm systems through a tensor MIDI interface"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-rhythm-nation"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
